--- a/content/resources/mit11_947s09_sw02.md
+++ b/content/resources/mit11_947s09_sw02.md
@@ -4,6 +4,7 @@ description: "Example of a student work for the essay portion of the final exam 
   \ the course.\r\n"
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-947-urbanization-and-development-spring-2009/05b48400d9817da529642ef39f90f875_MIT11_947s09_sw02.pdf
 file_type: application/pdf
+parent_uid: 0f5cfd80-efdb-0c7f-db1d-46c5639dc34e
 resourcetype: Document
 title: 'Intractable to Transformed: How National Level Peace Processes Shape Urban
   Level Violence'
