--- a/content/resources/mit11_947s09_sw04.md
+++ b/content/resources/mit11_947s09_sw04.md
@@ -4,6 +4,7 @@ description: Example of a student work for the essay portion of the final exam o
   the course.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-947-urbanization-and-development-spring-2009/0b7bb41ace95135af1a2bd3d6780ad61_MIT11_947s09_sw04.pdf
 file_type: application/pdf
+parent_uid: 0f5cfd80-efdb-0c7f-db1d-46c5639dc34e
 resourcetype: Document
 title: 'Is a Normative Description of the Form of African Cities Possible? '
 uid: 0b7bb41a-ce95-135a-f1a2-bd3d6780ad61
